--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Arrange a graph into layers",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/bagilevi/layerizer#readme",
   "dependencies": {
     "graphlib": "^2.1.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.0"
   }
 }
